# tetris

./: .gitignore  .rustfmt.toml  Cargo.toml  TODO.md  flake.nix  flake.nix.prev  jstris-sprint.sh  jstris.py  settings.kdl  sprints.gpi  tetrio-sprint.sh
assets/: settings.kdl
cli/: Cargo.toml  settings.kdl
cli/src/: graphics.rs  input.rs  main.rs  settings.rs  sound.rs
scripts/: chart-times.py  jstris-sprint.sh  tetrio-sprint.sh
src/: game.rs  graphics.rs  input.rs  keys.rs  lib.rs  main.rs  replay.rs  settings.rs  sound.rs  tests.rs
tui/: Cargo.toml  settings.kdl
tui/src/: graphics.rs  input.rs  main.rs  settings.rs  sound.rs
web/: Cargo.toml  build.sh  index.html  style.css
web/.cargo/: config.toml
web/assets/: index.html  style.css
web/src/: fps.rs  graphics.rs  input.rs  lib.rs  skin.rs
