[workspace]
members = ["cli", "web"]
default-members = ["cli"]

[workspace.dependencies]
log = "0.4"
rand = "0.9"
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[package]
name = "tetris"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
rand.workspace = true
serde.workspace = true
anyhow.workspace = true
