[workspace]
members = ["cli", "web"]
default-members = ["cli"]

[workspace.dependencies]
log = "0.4"
rand = "0.9"
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
web-time = "1.1"
fumen = "0.1"

[package]
name = "tetris"
version = "0.1.0"
edition = "2024"

[dependencies]
rand.workspace = true
serde.workspace = true
anyhow.workspace = true
# TODO: rewrite this to use `performance.now()` on the web side
web-time.workspace = true

[dev-dependencies]
fumen.workspace = true
