[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.20"
termios = "0.3"
ftail = "0.3"
libc = "0.2"
serde_json = "1"
log-panics = "2.1"
clap = { version = "4.5.40", features = ["derive"] }
tetris = { path = ".." }
directories = "6"
cached-path = "0.8" # TODO: make optional with feature

log.workspace = true
anyhow.workspace = true
rand.workspace = true
