[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.20"
termios = "0.3"
ftail = "0.3"
libc = "0.2"
serde_json = "1"
log-panics = "2.1"
clap = { version = "4.5.40", features = ["derive"] }
directories = "6"

cached-path = { version = "0.8", optional = true }
reqwest = { version = "0.11", optional = true }

tetris = { path = ".." }

log.workspace = true
anyhow.workspace = true
rand.workspace = true
js-sys = "0.3.77"

[features]
default = ["url-assets"]
url-assets = ["dep:reqwest", "dep:cached-path"]
