[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.21"
termios = "0.3"
ftail = "0.3"
libc = "0.2"
kdl = "6"
log-panics = "2.1"
clap = { version = "4.5.43", features = ["derive"] }
directories = "6"

cached-path = { version = "0.8", optional = true }
reqwest = { version = "0.11", optional = true }

tetris = { path = ".." }

log.workspace = true
anyhow.workspace = true
rand.workspace = true
web-time.workspace = true
strum.workspace = true
serde_json.workspace = true

[features]
default = ["url-assets"]
url-assets = ["dep:reqwest", "dep:cached-path"]
