[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tetris = { path = ".." }
image = { version = "0.25", default-features = false, features = [
    "png",
    "qoi",
    "gif",
    "webp",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "ImageBitmap",
    "Response",
    "Blob",
    "console",
] }
