[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tetris = { path = ".." }
image = { version = "0.25", default-features = false, features = [
    "png",
    "webp",
    # "qoi",
    # "gif",
] }
ultraviolet = { version = "0.10", features = ["f64"] }
bimap = "0.6"
ringbuffer.workspace = true
web-time.workspace = true
futures.workspace = true
anyhow.workspace = true
log.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wasm-repeated-animation-frame = "0.1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlDivElement",
    "ImageData",
    "ImageBitmap",
    "Response",
    "Blob",
    "Storage",
    "KeyboardEvent",
    "AddEventListenerOptions",
    "console",
] }
